# IQ

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.rst  docker-compose.yml
iq-api/: .pre-commit-config.yaml  Dockerfile  README.md  README.rst  pyproject.toml  requirements.txt  standalone.docker-compose.yml
iq-api-golang/: .gitignore  Dockerfile  README.md  go.mod  standalone.docker-compose.yml
iq-api-golang/main/: go.mod
iq-api-golang/src/: go.mod
iq-api-golang/src/main/: go.mod  go.sum  hello_test.go  main.go
iq-api/app/: handlers.py  main.py  models.py  settings.py
iq-api/app/mongo/: __init__.py  compose.py  person.py  question.py  tag.py  util.py
iq-api/docker/: docker-compose.yml
iq-api/iq_api/: handlers.py  main.py  models.py  settings.py  utils.py
iq-api/iq_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
iq-api/iq_api/mongo/: __init__.py  person.py  question.py
iq-api/tests/: test_iq_api.py
iq-app/: README.md  nuxt.config.js  package.json
iq-app/components/: MDEditor.vue  PersonItem.vue  QuestionItem.vue
iq-app/layouts/: default.vue
iq-app/pages/: index.vue  questions.vue
iq-app/store/: question.js
iq-client/: Dockerfile  README.md  ava.config.cjs  docker-compose.yml  nuxt.config.js  package.json  standalone.docker-compose.yml
iq-client/components/: PersonItem.vue  QuestionItem.vue
iq-client/layouts/: default.vue
iq-client/pages/: index.vue  questions.vue  tags.vue
iq-client/plugins/: common.js  vue-tagsinput.js
iq-client/store/: index.js  person.js  question.js  tag.js
(+12 files in other folders)
