[tool.poetry]
name = "iq-api"
version = "0.1.0"
description = ""
authors = ["jongsoobae <ocpek@nate.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.49.0"
uvicorn = "^0.11.3"
motor = "^2.1.0"
databases = "^0.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pre-commit = "^2.0.1"
httpie = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
